# FAR

./: .gitignore  FAR.spec  README.md  main.py  pyproject.toml  results_123_20260501_161131.json
client/: main.py
client/api/: client.py
client/config/: default_config.json
client/desktop/: main.py
client/desktop/kv/: menu.kv
client/desktop/models/: database.py
client/desktop/views/: menu_screen.py  results_screen.py  settings_screen.py  survey_screen.py
client/kv/: results.kv  settings.kv  survey.kv
client/models/: database.py
client/utils/: config.py
client/utils/config/: config.json  config.py
client/views/: __init__.py  menu_screen.py  results_screen.py  settings_screen.py  survey_screen.py
far.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: run.py
server/app/: main.py
server/app/api/v1/endpoints/: health.py  sync.py  sync_images.py  updates.py
server/app/core/: config.py  database.py  security.py
server/app/models/: __init__.py  image.py  session.py  user.py
server/app/services/: image_sync_service.py  survey_service.py  sync_service.py  update_service.py
server/scripts/: build_client.py
