[project]
name = "far"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.13.5",
  "asyncpg>=0.31.0",
  "fastapi>=0.136.1",
  "kivy>=2.3.1",
  "numpy>=2.4.4",
  "openpyxl>=3.1.5",
  "pandas>=3.0.2",
  "pillow>=12.2.0",
  "postgres>=4.0",
  "psycopg2-binary>=2.9.12",
  "pydantic-settings>=2.14.0",
  "pyinstaller>=6.20.0",
  "python-multipart>=0.0.27",
  "sqlalchemy>=2.0.49",
  "uvicorn>=0.46.0",
]

[project.scripts]
desktop = "client.main:main"
server = "server.run:start"

[tool.pyright]
typpeCheckingMode = "off"
pythonPath = ".venv/bin/python"
venvPath = "."
venv = ".venv"

[tool.setuptools.packages.find]
include = ["client*", "server*", "static*"]
